welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:35: error: illegal start of statement (no modifiers allowed here)
override def run()
^MethodsPicture:93: error: Unmatched closing brace '}' ignored here
}
^